Day 2: Unit testing
